--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,13 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Set VERSION variable from tag
+      if: ${GITHUB_REF != 'refs/heads/main'
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+    - name: Set VERSION variable from tag
+      if: ${GITHUB_REF == 'refs/heads/main'
+      run: | 
+        git TAG_VERSION=$(git describe --tags --abbrev=0)
+        echo "VERSION=${TAG_VERSION/v}" >> $GITHUB_ENV
     - name: Pack
       working-directory: ./src/QueryByShape.GraphQLClient
       run: dotnet pack --configuration Release /p:Version=${VERSION} --output .
