--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Set VERSION variable from tag
       if: github.ref == 'refs/heads/main'
       run: | 
+        git fetch --tags
         TAG_VERSION=$(git describe --tags --abbrev=0)
         echo "VERSION=${TAG_VERSION/v}" >> $GITHUB_ENV
     - name: Pack
