--- a/tests/QueryByShape.Analyzer.Benchmark/QueryByShape.Analyzer.Benchmark.csproj
+++ b/tests/QueryByShape.Analyzer.Benchmark/QueryByShape.Analyzer.Benchmark.csproj
@@ -23,6 +23,7 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" Version="1.1.2" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.14.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.14.0" />
+		<PackageReference Include="Microsoft.VisualStudio.DiagnosticsHub.BenchmarkDotNetDiagnosers" Version="18.3.36812.1" />
 		<PackageReference Include="System.Text.Json" Version="8.0.5" />
 	</ItemGroup>
 
